--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -156,6 +156,10 @@ body:hover .visually-hidden button {
   margin-right: auto;
 }
 
+.width-half {
+  width: 50%
+}
+
 /* file page content container */
 
 .full {
