--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -160,6 +160,10 @@ body:hover .visually-hidden button {
   width: 45%
 }
 
+.width-quarter {
+  width: 25%
+}
+
 /* file page content container */
 
 .full {
